# candies

./: .gitignore  LICENSE  Project.toml  README.md  justfile  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
docs/: requirements.txt
docs/source/: conf.py  contents.md  index.md
src/: Candies.jl
src/candies/: __init__.py  __main__.py  app.py  base.py  cli.py  confectioner.py  core.py  features.py  interfaces.py  kernels.py  plotting.py  processing.py  utensils.py  utilities.py
test/: runtests.jl
