[metadata]
name =  candies
license = MIT License
license_file = LICENSE
author = "Ujjwal Panda"
author_email = "ujjwalpanda97@gmail.com"
description = "Sweet, sweet candy-dates!"
long_description_content_type = text/markdown
long_description = file: README.md, CHANGELOG.md, CONTRIBUTING.md

project_urls = 
    Home Page = https://github.com/astrogewgaw/candies
    Source Code = https://github.com/astrogewgaw/candies
    Documentation = https://github.com/astrogewgaw/candies
    Bug Reports = https://github.com/astrogewgaw/candies/issues

classifiers =
    Operating System :: Unix
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
package_dir = =src
use_scm_version = True
python_requires = >=3.8
include_package_data = True
setup_requires = setuptools_scm[toml]>=6.0

install_requires =
  rich
  h5py
  numba
  numpy
  priwo
  pandas
  cyclopts
  generalimport
  typing_extensions;python_version<"3.11"

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  candies = candies.app:app
