[metadata]
name =  candies
license = MIT License
license_file = LICENSE
author = "Ujjwal Panda"
author_email = "ujjwalpanda97@gmail.com"
description = "Sweet, sweet candy-dates!"
long_description_content_type = text/markdown
long_description = file: README.md, CHANGELOG.md, CONTRIBUTING.md

project_urls = 
    Home Page = https://github.com/astrogewgaw/candies
    Source Code = https://github.com/astrogewgaw/candies
    Documentation = https://github.com/astrogewgaw/candies
    Bug Reports = https://github.com/astrogewgaw/candies/issues

classifiers =
    Operating System :: Unix
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
package_dir = =src
use_scm_version = True
python_requires = >=3.10
include_package_data = True
setup_requires = setuptools_scm[toml]>=6.0

install_requires =
  numba
  numpy
  numba-cuda

  rich
  h5py
  priwo
  pandas
  joblib
  cyclopts
  ultraplot

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  candies = candies.app:app
